--- a/goods.html
+++ b/goods.html
@@ -40,64 +40,52 @@
                     <div class="products-wrapper">
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/goods/goods1.jpg" alt="restaurant1">
+                                <img src="./images/goods/goods1.jpg" alt="goods1">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
-                                    <h4 class="products-card__description-title">Пицца плюс</h4>
-                                    <div class="products-card__description-badge">50 мин</div>
+                                    <h5 class="products-card__description--name">
+                                        Ролл угорь стандарт
+                                    </h5>
                                 </div>
-                                <div class="products-card__description-info">
-                                    <h4 class="products-card__description-rating">
-                                        <img src="./images/star.svg" alt="rating"
-                                            class="products-card__description-rating-star">
-                                        4.5
-                                    </h4>
-                                    <h4 class="products-card__description-price">От 900 ₽</h4>
-                                    <div class="products-card__description-category">Пицца </div>
+                                <div class="products-card__description-row">
+                                    <p class="products-card__description--text">
+                                        Рис, угорь, соус унаги, кунжут, водоросли нори.
+                                    </p>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-controls">
+                                        <button type="button" class="btn btn-primary btn-white">В корзину<img
+                                                src="./images/goods/button.svg" alt="shopping-cart">
+                                        </button>
+                                        <span class="products-card__description-controls--price">250 ₽</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/goods/goods2.jpg" alt="restaurant2">
+                                <img src="./images/goods/goods2.jpg" alt="goods2">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
-                                    <h4 class="products-card__description-title">Тануки</h4>
-                                    <div class="products-card__description-badge">50 мин</div>
+                                    <h5 class="products-card__description--name">
+                                        Калифорния лосось стандарт
+                                    </h5>
                                 </div>
-                                <div class="products-card__description-info">
-                                    <h4 class="products-card__description-rating">
-                                        <img src="./images/star.svg" alt="rating"
-                                            class="products-card__description-rating-star">
-                                        4.5
-                                    </h4>
-                                    <h4 class="products-card__description-price">От 900 ₽</h4>
-                                    <div class="products-card__description-category">Пицца </div>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <div class="products-card">
-                            <div class="products-card__image">
-                                <img src="./images/goods/goods3.jpg" alt="restaurant3">
-                            </div>
-                            <div class="products-card__description">
                                 <div class="products-card__description-row">
-                                    <h4 class="products-card__description-title">FoodBand</h4>
-                                    <div class="products-card__description-badge">50 мин</div>
+                                    <p class="products-card__description--text">
+                                        Рис, лосось, авокадо, огурец, майонез, икра масаго, водоросли нори.
+                                    </p>
                                 </div>
-                                <div class="products-card__description-info">
-                                    <h4 class="products-card__description-rating">
-                                        <img src="./images/star.svg" alt="rating"
-                                            class="products-card__description-rating-star">
-                                        4.5
-                                    </h4>
-                                    <h4 class="products-card__description-price">От 900 ₽</h4>
-                                    <div class="products-card__description-category">Пицца </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-controls">
+                                        <button type="button" class="btn btn-primary btn-white">В корзину<img
+                                                src="./images/goods/button.svg" alt="shopping-cart">
+                                        </button>
+                                        <span class="products-card__description-controls--price">395 ₽</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -105,21 +93,26 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/goods/goods4.jpg" alt="restaurant4">
+                                <img src="./images/goods/goods3.jpg" alt="goods3">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
-                                    <h4 class="products-card__description-title">Жадина-пицца</h4>
-                                    <div class="products-card__description-badge">50 мин</div>
+                                    <h5 class="products-card__description--name">
+                                        Окинава стандарт
+                                    </h5>
                                 </div>
-                                <div class="products-card__description-info">
-                                    <h4 class="products-card__description-rating">
-                                        <img src="./images/star.svg" alt="rating"
-                                            class="products-card__description-rating-star">
-                                        4.5
-                                    </h4>
-                                    <h4 class="products-card__description-price">От 900 ₽</h4>
-                                    <div class="products-card__description-category">Пицца </div>
+                                <div class="products-card__description-row">
+                                    <p class="products-card__description--text">
+                                        Рис, креветка отварная, сыр сливочный, лосось, огурец свежий.
+                                    </p>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-controls">
+                                        <button type="button" class="btn btn-primary btn-white">В корзину<img
+                                                src="./images/goods/button.svg" alt="shopping-cart">
+                                        </button>
+                                        <span class="products-card__description-controls--price">250 ₽</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -127,21 +120,26 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/goods/goods5.jpg" alt="restaurant5">
+                                <img src="./images/goods/goods4.jpg" alt="goods4">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
-                                    <h4 class="products-card__description-title">Точка еды</h4>
-                                    <div class="products-card__description-badge">50 мин</div>
+                                    <h5 class="products-card__description--name">
+                                        Цезарь маки хl
+                                    </h5>
                                 </div>
-                                <div class="products-card__description-info">
-                                    <h4 class="products-card__description-rating">
-                                        <img src="./images/star.svg" alt="rating"
-                                            class="products-card__description-rating-star">
-                                        4.5
-                                    </h4>
-                                    <h4 class="products-card__description-price">От 900 ₽</h4>
-                                    <div class="products-card__description-category">Пицца </div>
+                                <div class="products-card__description-row">
+                                    <p class="products-card__description--text">
+                                        Рис, куриная грудка копченая, икра масаго, томат, айсберг, соус цезарь.
+                                    </p>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-controls">
+                                        <button type="button" class="btn btn-primary btn-white">В корзину<img
+                                                src="./images/goods/button.svg" alt="shopping-cart">
+                                        </button>
+                                        <span class="products-card__description-controls--price">250 ₽</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -149,21 +147,53 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/goods/goods6.jpg" alt="restaurant6">
+                                <img src="./images/goods/goods5.jpg" alt="goods5">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
-                                    <h4 class="products-card__description-title">PizzaBurger</h4>
-                                    <div class="products-card__description-badge">50 мин</div>
+                                    <h5 class="products-card__description--name">
+                                        Ясай маки стандарт 185 г
+                                    </h5>
                                 </div>
-                                <div class="products-card__description-info">
-                                    <h4 class="products-card__description-rating">
-                                        <img src="./images/star.svg" alt="rating"
-                                            class="products-card__description-rating-star">
-                                        4.5
-                                    </h4>
-                                    <h4 class="products-card__description-price">От 900 ₽</h4>
-                                    <div class="products-card__description-category">Пицца </div>
+                                <div class="products-card__description-row">
+                                    <p class="products-card__description--text">
+                                        Рис, помидор свежий, перец болгарский, авокадо, огурец, айсберг.
+                                    </p>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-controls">
+                                        <button type="button" class="btn btn-primary btn-white">В корзину<img
+                                                src="./images/goods/button.svg" alt="shopping-cart">
+                                        </button>
+                                        <span class="products-card__description-controls--price">250 ₽</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="./images/goods/goods6.jpg" alt="goods6">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h5 class="products-card__description--name">
+                                        Ролл с креветкой стандарт
+                                    </h5>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <p class="products-card__description--text">
+                                        Рис, водоросли нори, креветки отварные, сыр сливочный, огурцы.
+                                    </p>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-controls">
+                                        <button type="button" class="btn btn-primary btn-white">В корзину<img
+                                                src="./images/goods/button.svg" alt="shopping-cart">
+                                        </button>
+                                        <span class="products-card__description-controls--price">250 ₽</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
