--- a/index.html
+++ b/index.html
@@ -195,45 +195,106 @@
                         <img src="./images/close.svg" alt="close">
                     </span>
                 </div>
-                <div class="cart-modal__body">
 
+                <div class="cart-modal__body">
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+                            <button type="button" class="btn btn-outline">-
+                            </button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button type="button" class="btn btn-outline">+
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+                            <button type="button" class="btn btn-outline">-
+                            </button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button type="button" class="btn btn-outline">+
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+                            <button type="button" class="btn btn-outline">-
+                            </button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button type="button" class="btn btn-outline">+
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+                            <button type="button" class="btn btn-outline">-
+                            </button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button type="button" class="btn btn-outline">+
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+                            <button type="button" class="btn btn-outline">-
+                            </button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button type="button" class="btn btn-outline">+
+                            </button>
+                        </div>
+                    </div>
                 </div>
-                <div class="cart-modal__footer">
-                    <div class="cart-modal__footer--price">
-                        1250 ₽
-                    </div>
-                    <div class="cart-modal__footer--controls">
-                        <button type="button" class="btn btn-primary">Оформить заказ
-                        </button>
-                        <button type="button" class="btn btn-outline">Отмена
-                        </button>
-                    </div>
+            </div>
+
+            <div class="cart-modal__footer">
+                <div class="cart-modal__footer--price">
+                    1250 ₽
+                </div>
+                <div class="cart-modal__footer--controls">
+                    <button type="button" class="btn btn-primary">Оформить заказ
+                    </button>
+                    <button type="button" class="btn btn-outline">Отмена
+                    </button>
                 </div>
             </div>
         </div>
+    </div>
 
-        <footer class="footer">
-            <div class="container">
-                <div class="footer-box">
-                    <div class="footer-logo logo">
-                        <img src="./images/logo.png" alt="logo">
-                    </div>
-                    <div class="footer-nav">
-                        <ul>
-                            <li><a href="#">Ресторанам</a></li>
-                            <li><a href="#">Курьерам</a></li>
-                            <li><a href="#">Пресс-центр</a></li>
-                            <li><a href="#">Контакты</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-social">
-                        <a href="#"><img src="./images/social/insta.png" alt="instagram"></a>
-                        <a href="#"><img src="./images/social/facebook.png" alt="facebook"></a>
-                        <a href="#"><img src="./images/social/vk.png" alt="vk"></a>
-                    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-box">
+                <div class="footer-logo logo">
+                    <img src="./images/logo.png" alt="logo">
+                </div>
+                <div class="footer-nav">
+                    <ul>
+                        <li><a href="#">Ресторанам</a></li>
+                        <li><a href="#">Курьерам</a></li>
+                        <li><a href="#">Пресс-центр</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <a href="#"><img src="./images/social/insta.png" alt="instagram"></a>
+                    <a href="#"><img src="./images/social/facebook.png" alt="facebook"></a>
+                    <a href="#"><img src="./images/social/vk.png" alt="vk"></a>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
     </div>
 </body>
 
