--- a/goods.html
+++ b/goods.html
@@ -18,9 +18,9 @@
         <header class="header">
             <div class="container">
                 <div class="header-box">
-                    <div class="header-logo logo">
+                    <a href="./index.html" class="header-logo logo">
                         <img src="./images/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="header-controls">
                         <button type="button" class="btn btn-primary"><img src="./images/button/user.png"
                                 alt="user">Войти
@@ -205,9 +205,9 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer-box">
-                    <div class="footer-logo logo">
+                    <a href="./index.html" class="footer-logo logo">
                         <img src="./images/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="footer-nav">
                         <ul>
                             <li><a href="#">Ресторанам</a></li>
