--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header class="header">
             <div class="container">
                 <div class="header-box">
-                    <div class="header-logo logo">
+                    <a href="./index.html" class="header-logo logo">
                         <img src="./images/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="header-controls">
                         <button type="button" class="btn btn-primary"><img src="./images/button/user.png"
                                 alt="user">Войти
@@ -53,7 +53,7 @@
 
                     <div class="products-wrapper">
 
-                        <div class="products-card">
+                        <a href="./goods.html" class="products-card">
                             <div class="products-card__image">
                                 <img src="./images/rest/rest1.jpg" alt="restaurant1">
                             </div>
@@ -72,9 +72,9 @@
                                     <div class="products-card__description-category">Пицца </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
-                        <div class="products-card">
+                        <a href="./goods.html" class="products-card">
                             <div class="products-card__image">
                                 <img src="./images/rest/rest2.jpg" alt="restaurant2">
                             </div>
@@ -93,10 +93,10 @@
                                     <div class="products-card__description-category">Пицца </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
 
-                        <div class="products-card">
+                        <a href="./goods.html" class="products-card">
                             <div class="products-card__image">
                                 <img src="./images/rest/rest3.jpg" alt="restaurant3">
                             </div>
@@ -115,10 +115,10 @@
                                     <div class="products-card__description-category">Пицца </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
 
-                        <div class="products-card">
+                        <a href="./goods.html" class="products-card">
                             <div class="products-card__image">
                                 <img src="./images/rest/rest4.jpg" alt="restaurant4">
                             </div>
@@ -137,10 +137,10 @@
                                     <div class="products-card__description-category">Пицца </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
 
-                        <div class="products-card">
+                        <a href="./goods.html" class="products-card">
                             <div class="products-card__image">
                                 <img src="./images/rest/rest5.jpg" alt="restaurant5">
                             </div>
@@ -159,10 +159,10 @@
                                     <div class="products-card__description-category">Пицца </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
 
-                        <div class="products-card">
+                        <a href="./goods.html" class="products-card">
                             <div class="products-card__image">
                                 <img src="./images/rest/rest6.jpg" alt="restaurant6">
                             </div>
@@ -181,7 +181,7 @@
                                     <div class="products-card__description-category">Пицца </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
                     </div>
             </section>
@@ -276,9 +276,9 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-box">
-                <div class="footer-logo logo">
+                <a href="./index.html" class="footer-logo logo">
                     <img src="./images/logo.png" alt="logo">
-                </div>
+                </a>
                 <div class="footer-nav">
                     <ul>
                         <li><a href="#">Ресторанам</a></li>
