modal: click, close

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <button type="button" class="btn btn-primary"><img src="./images/button/user.png"
                                 alt="user">Войти
                         </button>
-                        <button type="button" class="btn btn-outline"><img src="./images/button/basket.png"
-                                alt="basket">Корзина
+                        <button type="button" class="btn btn-outline" id="cart-button"><img
+                                src="./images/button/basket.png" alt="basket">Корзина
                         </button>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
             <div class="cart-modal">
                 <div class="cart-modal__header">
                     <h2 class="cart-modal__header--title">Корзина</h2>
-                    <span class="cart-modal__header--close">
+                    <span id="cart-close" class="cart-modal__header--close">
                         <img src="./images/close.svg" alt="close">
                     </span>
                 </div>
