--- a/goods.html
+++ b/goods.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <script type="text/javascript" src="./script/index.js" defer></script>
     <title>Delivery Food</title>
 </head>
 
@@ -25,8 +26,8 @@
                         <button type="button" class="btn btn-primary"><img src="./images/button/user.png"
                                 alt="user">Войти
                         </button>
-                        <button type="button" class="btn btn-outline"><img src="./images/button/basket.png"
-                                alt="basket">Корзина
+                        <button type="button" class="btn btn-outline" id="cart-button"><img
+                                src="./images/button/basket.png" alt="basket">Корзина
                         </button>
                     </div>
                 </div>
@@ -206,7 +207,7 @@
             <div class="cart-modal">
                 <div class="cart-modal__header">
                     <h2 class="cart-modal__header--title">Корзина</h2>
-                    <span class="cart-modal__header--close">
+                    <span id="cart-close" class="cart-modal__header--close">
                         <img src="./images/close.svg" alt="close">
                     </span>
                 </div>
